--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,9 @@
 @import url(styles/header.css);
 @import url(styles/banner.css);
 @import url(styles/carrossel.css);
+@import url(styles/topicos.css);
+@import url(styles/contato.css);
+@import url(styles/rodapé.css);
 
 .bookklub{
 width: 80%;
@@ -11,6 +14,7 @@ font-family: 'Roboto', sans-serif;
 --cor-de-fundo: rgb(125,99,182);
 --branco: #FFFFFF;
 --roxo: #BA8DCF;
+--rosa: #bb5be7;
 --fonte_principal: "Roboto"
 }
 
