--- a/styles/banner.css
+++ b/styles/banner.css
@@ -38,3 +38,36 @@ color: var(--branco);
 background: url("../img/Pesquisa.svg") no-repeat;
 background-position: 1em;
 }
+
+
+@media screen and (min-width: 1024px) {
+
+    .banner__titulo {
+        font-size: 36px;
+    }
+
+    .banner_pesquisa {
+        width: 50%;
+    }
+
+    .banner__pesquisa::placeholder {
+        background-position: 7em;
+    }
+}
+
+
+@media screen and (min-width: 1728px) {
+
+    .banner_pesquisa {
+        width: 35%;
+    }
+
+    .banner_pesquisa::placeholder {
+        background-position: 12em;
+    }
+
+    .banner {
+        padding: 6em 0;
+    }
+
+}
